--- a/src/pages/common.css
+++ b/src/pages/common.css
@@ -9,3 +9,8 @@
 .additem-bg{
     background-image: linear-gradient(#AB46D2, #F8B400);
 }
+.my-item-img{
+    width:60px;
+    height: 60px;
+    border-radius: 50%;
+}
